--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,3 +15,22 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'VT323', monospace;
 }
+
+blockquote {
+	font-style: italic;
+	border-left: 1px solid #fff;
+	padding-left: 1rem;
+}
+
+a, a:hover, a:active, a:visited {
+	text-decoration: underline;
+	color: #00ff41;
+}
+
+figure {
+	text-align: center;
+	img {
+		margin-top: 0.5rem;
+		margin-bottom: 1rem;
+	}
+}
