--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,12 +8,19 @@
 body {
 	font-family: 'IBM Plex Mono', monospace;
 	font-size: 1rem;
-	line-height: 1.5;
 	color: #fff;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'VT323', monospace;
+}
+
+h2 {
+	margin-top: 6rem;
+}
+
+p {
+	line-height: 1.6;
 }
 
 blockquote {
@@ -33,4 +40,9 @@ figure {
 		margin-top: 0.5rem;
 		margin-bottom: 1rem;
 	}
+}
+
+article#intro {
+	margin-top: 50vh;
+	margin-bottom: 50vh;
 }
