the videos need more space (neither "really" physical nor time... I am confused)

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -64,6 +64,8 @@
  	height: 0;
  	overflow: hidden;
  	max-width: 100%;
+ 	margin-top: 1.5rem;
+ 	margin-bottom: 1.5rem;
  	iframe, object, embed {
 		position: absolute;
 		top: 0;
