--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -65,8 +65,16 @@
 		text-align: center;
 		
 		&:first-child {
+			text-align: left;
+			margin-bottom: 3rem;
+		}
+
+		&:nth-child(2) {
 			font-style: italic;
-			text-align: center;
+		}
+
+		span {
+			font-style: italic;
 		}
  	}
  }
